@@ -56,7 +56,9 @@ Improved Process Management: allow to copy any windows contents to internal clip
 
 Improved ZRCP: Allow multiple simultaneous clients
 
-Improved ZENG: Allow to connect more than two hosts
+Improved ZENG:
+- Allow to connect more than two hosts
+- Allow to disable sending input events (keyboard, joystick)
 
 Improved ZX Spectrum Next emulation:
 - Allow to boot NextZXOS v2.07l
